适应coinFont创建tab图标

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,16 @@ dev_dependencies:
     sdk: flutter
 
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: appIconFont
+      fonts:
+        - asset: assets/fonts/iconfont.ttf
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
